--- a/ut-registration-planner/styles/options.module.scss
+++ b/ut-registration-planner/styles/options.module.scss
@@ -17,12 +17,12 @@
 
 .calendarContainer {
     width: 100%;
-    height: 75%;
+    height: 100%;
     margin: 1rem;
     box-sizing: border-box;
 
     display: grid;
-    grid-template-columns: [column-1-start] 75px repeat(5, 275px);
+    grid-template-columns: [column-1-start] 75px repeat(5, minmax(200px, 300px));
     grid-template-rows: [row-1-start] 75px repeat(33, minmax(40px, 1fr));
     overflow-y: scroll;
 
