--- a/ut-registration-planner/styles/globals.css
+++ b/ut-registration-planner/styles/globals.css
@@ -13,6 +13,13 @@ body {
     height: 600px; */
 }
 
+@media (prefers-color-scheme: dark) {
+    html,
+    body {
+        color-scheme: dark;
+    }
+}
+
 body #__next {
     width: 100%;
     height: 100%;
