Fix Paper elevation-related shading

--- a/ut-registration-planner/components/CourseCard.module.scss
+++ b/ut-registration-planner/components/CourseCard.module.scss
@@ -12,10 +12,10 @@
     // border-radius: 14px;
 
     color: white;
-    background-color: #bf5700;
+    background: #bf5700;
 
     &:hover {
-        background-color: #a34900;
+        background: #a34900;
     }
 }
 
